// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compile-vue-file compile [a.vue] 1`] = `
"/* script */





import { Component, Vue } from 'vue-property-decorator';
@Component
const __vue_script__ = class A extends Vue {}

/* template */
var __vue_render__ = function() {
  var _vm = this
  var _h = _vm.$createElement
  var _c = _vm._self._c || _h
  return _c(\\"div\\")
}
var __vue_staticRenderFns__ = []
__vue_render__._withStripped = true

  /* style */
  const __vue_inject_styles__ = undefined
  /* scoped */
  const __vue_scope_id__ = undefined
  /* module identifier */
  const __vue_module_identifier__ = undefined
  /* functional template */
  const __vue_is_functional_template__ = false
  /* component normalizer */
  import __vue_normalize__ from 'vue-runtime-helpers/dist/normalize-component.js'
  /* style inject */
  
  /* style inject SSR */
  

  
  export default __vue_normalize__(
    { render: __vue_render__, staticRenderFns: __vue_staticRenderFns__ },
    __vue_inject_styles__,
    __vue_script__,
    __vue_scope_id__,
    __vue_is_functional_template__,
    __vue_module_identifier__,
    undefined,
    undefined
  )"
`;

exports[`compile-vue-file compile [b.vue] 1`] = `
"/* script */





import { Component, Vue } from 'vue-property-decorator';
// @ts-ignore
import Custom from 'xx-lib/Custom.vue';
@Component({
  components: {
    Custom,
  },
})
const __vue_script__ = class extends Vue {}

/* template */
var __vue_render__ = function() {
  var _vm = this
  var _h = _vm.$createElement
  var _c = _vm._self._c || _h
  return _c(\\"div\\", [_c(\\"Custom\\")], 1)
}
var __vue_staticRenderFns__ = []
__vue_render__._withStripped = true

  /* style */
  const __vue_inject_styles__ = undefined
  /* scoped */
  const __vue_scope_id__ = \\"data-v-7dc80285\\"
  /* module identifier */
  const __vue_module_identifier__ = undefined
  /* functional template */
  const __vue_is_functional_template__ = false
  /* component normalizer */
  import __vue_normalize__ from 'vue-runtime-helpers/dist/normalize-component.js'
  /* style inject */
  
  /* style inject SSR */
  

  
  export default __vue_normalize__(
    { render: __vue_render__, staticRenderFns: __vue_staticRenderFns__ },
    __vue_inject_styles__,
    __vue_script__,
    __vue_scope_id__,
    __vue_is_functional_template__,
    __vue_module_identifier__,
    undefined,
    undefined
  )"
`;
